@@ -37,6 +37,7 @@ Version 1.3.2
 5762							: regex log message crash
 5763							: crash in log dialog
 5790							: "stop on copy" stored in registry for log dialog
+5826							: cache crash with too long paths
 
 Version 1.3.1
 5434							: Apply a patch in non ANSI or non UTF8 encoding
