@@ -40,6 +40,8 @@ Version 1.3.2
        strings were applied to the log message. (Stefan)
 - BUG: Crash in log dialog while retreiving log messages. (Stefan)
 - BUG: The "stop on copy" setting was not saved in the log dialog. (Stefan)
+- BUG: The status cache would crash when a path longer than 260 chars
+       (MAX_PATH constant) was touched. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
